#
# Copyright 2015 Red Hat, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
#
# Refer to the README and COPYING files for full details of the license
#

vdsmcpudatatestsdir = ${vdsmtestsdir}/cpuinfo

dist_vdsmcpudatatests_DATA = \
	cpuinfo_E5649_x86_64.out \
	cpuinfo_POWER8E_ppc64le.out \
	cpuinfo_aarch64.out \
	cpuinfo_z14_s390x.out \
	cpuinfo_z196_s390x.out \
	$(NULL)
