# Copyright 2008 Red Hat, Inc. and/or its affiliates.
#
# Licensed to you under the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.  See the files README and
# LICENSE_GPL_v2 which accompany this distribution.
#

SUBDIRS = templates

vdsmrestdir = $(vdsmdir)/rest
dist_vdsmrest_DATA = \
	__init__.py \
	BindingREST.py \
	Dispatcher.py \
	Controller.py
